# mefai-signal-engine

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py
src/advanced/: __init__.py  ensemble.py  monte_carlo.py  regime_detector.py  rl_position_sizer.py  training_guide.py  transformer_predictor.py  walk_forward.py
src/api/: __init__.py  server.py
src/ml/: __init__.py  alts_model.py  feature_engine.py  majors_model.py  memes_model.py  trainer.py
src/pipeline/: __init__.py  ingestion.py  processor.py  scheduler.py
src/providers/: __init__.py  aggregator.py  artemis.py  base.py  coinmetrics.py  cryptoquant.py  defi_free.py  glassnode.py  intotheblock.py  kaiko.py  lunarcrush.py  messari.py  nansen.py  santiment.py  token_terminal.py
src/signals/: __init__.py  composer.py  correlation.py  onchain.py  sentiment.py  technical.py
tests/: test_features.py  test_models.py  test_signals.py
